# Rust

./: README.md
FHIR_server_coding_challenge/coding_challenge/: Cargo.toml  Dockerfile  README.md  Run.md  build.sh  docker-compose.yml  run-local.sh  setup.sh  test-api.sh  test-complete-flow.sh  test.sh
FHIR_server_coding_challenge/coding_challenge/db/: Cargo.toml  Dockerfile  fhir_extension.control  init.sql
FHIR_server_coding_challenge/coding_challenge/db/sql/: init.sql
FHIR_server_coding_challenge/coding_challenge/db/src/: lib.rs
FHIR_server_coding_challenge/coding_challenge/examples/: api_demo.sh
FHIR_server_coding_challenge/coding_challenge/fhir-extension/src/: lib.rs
FHIR_server_coding_challenge/coding_challenge/migrations/: 000_fhir_resources_table.sql  001_initial_schema.sql  002_add_search_functions.sql  002_fhir_extension_functions.sql  003_fhir_search_helpers.sql  004_remove_address_unique_constraint.sql  run_migrations.sql
FHIR_server_coding_challenge/coding_challenge/server/: Cargo.toml  Dockerfile
FHIR_server_coding_challenge/coding_challenge/server/src/: database.rs  handlers.rs  main.rs  models.rs
FHIR_server_coding_challenge/coding_challenge/server/src/db/: mod.rs
FHIR_server_coding_challenge/coding_challenge/server/src/handlers/: patient.rs
FHIR_server_coding_challenge/coding_challenge/server/tests/: integration_tests.rs
FHIR_server_coding_challenge/coding_challenge/src/: main.rs
FHIR_server_coding_challenge/coding_challenge/src/db/: config.rs  extension.rs  migrations.rs  mod.rs  models.rs  repository.rs
FHIR_server_coding_challenge/coding_challenge/src/handlers/: error.rs  history.rs  mod.rs  patient.rs
FHIR_server_coding_challenge/coding_challenge/src/models/: error.rs  history.rs  mod.rs  patient.rs
(+28 files in other folders)
