[package]
name = "fhir-extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pgrx_embed_fhir_extension"
path = "src/bin/pgrx_embed.rs"

[dependencies]
pgrx = "0.16.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
pgrx-tests = "0.16.1"

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []